microk8s/kong/eks-generated.yaml
---
# Source: kong/templates/service-kong-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-kong-admin
  namespace: kong
  annotations:
    konghq.com/protocol: "https"
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.1.0
    app.kubernetes.io/instance: "eks"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "2.4"
spec:
  type: NodePort
  ports:
  - name: kong-admin-tls
    port: 8444
    targetPort: 8444
    protocol: TCP
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: "eks"
---
# Source: kong/templates/service-kong-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-kong-manager
  namespace: kong
  annotations:
    konghq.com/protocol: "https"
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.1.0
    app.kubernetes.io/instance: "eks"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "2.4"
spec:
  type: NodePort
  ports:
  - name: kong-manager-tls
    port: 8445
    targetPort: 8445
    protocol: TCP
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: "eks"
---
# Source: kong/templates/service-kong-portal-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-kong-portalapi
  namespace: kong
  annotations:
    konghq.com/protocol: "https"
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.1.0
    app.kubernetes.io/instance: "eks"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "2.4"
spec:
  type: NodePort
  ports:
  - name: kong-portalapi
    port: 8004
    targetPort: 8004
    protocol: TCP
  - name: kong-portalapi-tls
    port: 8447
    targetPort: 8447
    protocol: TCP
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: "eks"
---
# Source: kong/templates/service-kong-portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-kong-portal
  namespace: kong
  annotations:
    konghq.com/protocol: "https"
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.1.0
    app.kubernetes.io/instance: "eks"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "2.4"
spec:
  type: NodePort
  ports:
  - name: kong-portal
    port: 8003
    targetPort: 8003
    protocol: TCP
  - name: kong-portal-tls
    port: 8446
    targetPort: 8446
    protocol: TCP
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: "eks"
---
# Source: kong/templates/service-kong-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-kong-proxy
  namespace: kong
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.1.0
    app.kubernetes.io/instance: "eks"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "2.4"
    enable-metrics: "true"
spec:
  type: LoadBalancer
  ports:
  - name: kong-proxy
    port: 80
    targetPort: 8000
    protocol: TCP
  - name: kong-proxy-tls
    port: 443
    targetPort: 8443
    protocol: TCP
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: "eks"
---
# Source: kong/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-kong
  namespace:  kong
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.1.0
    app.kubernetes.io/instance: "eks"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "2.4"
    app.kubernetes.io/component: app
  annotations:
    kuma.io/gateway: "enabled"
    traffic.sidecar.istio.io/includeInboundPorts: ""
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kong
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: "eks"

  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: kong
        helm.sh/chart: kong-2.1.0
        app.kubernetes.io/instance: "eks"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/version: "2.4"
        app.kubernetes.io/component: app
    spec:
      serviceAccountName: eks-kong
      
      containers:
      - name: ingress-controller
        args:
        - /kong-ingress-controller
        
        image: kong/kubernetes-ingress-controller:1.2
        imagePullPolicy: IfNotPresent
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          {}
      
      - name: "proxy"
        image: kong/kong-gateway:2.3.3.2-alpine
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - /bin/sleep 15 && kong quit
        ports:
        - name: admin-tls
          containerPort: 8444
          protocol: TCP
        - name: proxy
          containerPort: 8000
          protocol: TCP
        - name: proxy-tls
          containerPort: 8443
          protocol: TCP
        - name: status
          containerPort: 8100
          protocol: TCP
        - name: manager-tls
          containerPort: 8445
          protocol: TCP
        - name: portal
          containerPort: 8003
          protocol: TCP
        - name: portal-tls
          containerPort: 8446
          protocol: TCP
        - name: portalapi
          containerPort: 8004
          protocol: TCP
        - name: portalapi-tls
          containerPort: 8447
          protocol: TCP
        volumeMounts:
          - name: eks-kong-prefix-dir
            mountPath: /kong_prefix/
          - name: eks-kong-tmp
            mountPath: /tmp
          
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: status
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: status
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          {} 
      securityContext:
        {}
      terminationGracePeriodSeconds: 30
      tolerations:
        []
      volumes:
        - name: eks-kong-prefix-dir
          emptyDir: {}
        - name: eks-kong-tmp
          emptyDir: {}
---
# Source: kong/templates/service-kong-admin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eks-kong-admin
  namespace: kong
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.1.0
    app.kubernetes.io/instance: "eks"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "2.4"
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - host: admin.kong.eks.lab
    http:
      paths:
        - path: /
          backend:
            serviceName: eks-kong-admin
            servicePort: 8444
---
# Source: kong/templates/service-kong-manager.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eks-kong-manager
  namespace: kong
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.1.0
    app.kubernetes.io/instance: "eks"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "2.4"
spec:
  rules:
  - host: manager.kong.eks.lab
    http:
      paths:
        - path: /
          backend:
            serviceName: eks-kong-manager
            servicePort: 8445
---
# Source: kong/templates/service-kong-portal-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eks-kong-portalapi
  namespace: kong
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.1.0
    app.kubernetes.io/instance: "eks"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "2.4"
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - host: portalapi.kong.eks.lab
    http:
      paths:
        - path: /
          backend:
            serviceName: eks-kong-portalapi
            servicePort: 8447
---
# Source: kong/templates/service-kong-portal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eks-kong-portal
  namespace: kong
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.1.0
    app.kubernetes.io/instance: "eks"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "2.4"
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - host: portal.kong.eks.lab
    http:
      paths:
        - path: /
          backend:
            serviceName: eks-kong-portal
            servicePort: 8446
  tls:
  - hosts:
    - portal.kong.eks.lab
    secretName: eks-portal-tls-secret
